<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="de.andreaskrienke.android.droidcavation.SUnitDetailActivityFragment"
        android:weightSum="1"
        >

        <!-- SUNIT ID -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:text="@string/sunit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunit_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <!-- SUNIT NUMBER -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/sunit_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <!-- SUNIT LOCALIZATION -->
        <TextView
            android:text="@string/sunit_localization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_area_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/spin_sunit_area_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_square_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spin_square_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!-- SUNIT STRUCTURE -->
        <TextView
            android:text="@string/sunit_structure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_top_surface_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/sunit_top_surface_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_bottom_surface_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/sunit_bottom_surface_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- TACHY MEASUREMENTS -->
        <TextView
            android:text="@string/sunit_tachy_measurements"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_tachy_measurements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/sunit_tachy_measurements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="@string/sunit_tachy_measurements_on"
                android:textOff="@string/sunit_tachy_measurements_off"
                android:clickable="false" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/sunit_top_surface_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_top_surface_outline"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_bottom_surface_outline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_bottom_surface_outline"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_levelments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_levelments"
            android:clickable="false" />

        <!-- SUNIT DESCRIPTION -->
        <TextView
            android:text="@string/sunit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/sunit_shape"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/spin_sunit_shape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <TextView
            android:text="@string/sunit_sediment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/spin_sunit_sediment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sediment_types"
            />

        <TextView
            android:text="@string/sunit_sediment_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spin_sunit_sediment_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/sediment_sizes"
            android:clickable="false"
            />

        <TextView
            android:text="@string/sunit_sediment_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            />

        <SeekBar
            android:id="@+id/sunit_sediment_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:clickable="false"
            android:focusable="false"
            />

        <TextView
            android:text="@string/sunit_short_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sunit_short_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- MATRIX -->
        <TextView
            android:text="@string/sunit_matrix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />
        <TextView
            android:text="@string/sunit_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spin_sunit_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            />

        <TextView
            android:text="@string/sunit_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spin_sunit_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            />

        <TextView
            android:text="@string/sunit_associated_feature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spin_sunit_associated_feature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            />

        <!-- FINDS -->
        <TextView
            android:text="@string/sunit_finds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />
        <CheckBox
            android:id="@+id/sunit_finds_charcoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_charcoal"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_pottery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_pottery"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_bone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_bone"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_faience"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_faience"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_shell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_shell"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_wood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_wood"
            android:clickable="false" />
        <CheckBox
            android:id="@+id/sunit_finds_clay_mud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunit_finds_clay_mud"
            android:clickable="false" />

        <TextView
            android:text="@string/sunit_finds_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sunit_finds_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- DATING/INTERPRETATION -->
        <TextView
            android:text="@string/sunit_dating_interpretation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />
        <TextView
            android:text="@string/sunit_dating_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sunit_dating_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <!-- SKETCH/PICTURE -->
        <TextView
            android:text="@string/sunit_sketch_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />

        <!-- EXCAVATION -->
        <TextView
            android:text="@string/sunit_excavation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            style="?android:attr/listSeparatorTextViewStyle"
            />
        <TextView
            android:text="@string/sunit_excavation_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sunit_excavation_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <TextView
            android:text="@string/sunit_excavation_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sunit_excavation_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false" />

        <!-- EXCAVATED BY -->
        <TextView
            android:text="@string/sunit_excavated_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sunit_excavated_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

    </LinearLayout>
</ScrollView>