<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <!-- Buttons -->
        <Button
            android:id="@+id/btn_start_sites"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_sites"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_start_sunits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_sunits"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btn_start_features"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_features"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">

        <!-- Buttons -->
        <Button
            android:id="@+id/btn_start_projects"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_projects"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_start_squares"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_squares"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_start_media"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minWidth="120dp"
            android:textSize="24sp"
            android:text="@string/btn_start_media"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
